[package]
name = "Ping"
version = "0.1.0"
authors = ["Ananth Dandibhotla <anisaidan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ctrlc = {version = "3.1.4", features= ["termination"]}
crossbeam = "0.7"
[dependencies.pnet]
version = "0.25.0"

